--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@modules/app-menu": "file:./modules/app-menu/",
     "@modules/articles": "file:./modules/articles/",
+    "@modules/chat": "file:./modules/chat/",
     "@modules/login": "file:./modules/login/",
     "@modules/privacy-policy": "file:./modules/privacy-policy",
     "@modules/terms-and-conditions": "file:./modules/terms-and-conditions",
